<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/hymn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hymn_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/alc_calc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acl_calc_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/jokes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jokes_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>